EN-10421 fix error on profile page (#3455)
* EN-10421: Use new cetera feature flag on profile

Don't try to use Cetera on the profile page unless the new cetera_profile_search feature flag is turned on.

* EN-10421: Fix profile catalog layout issue

* ENG: Fix incorrect core service uri in config

(cherry picked from commit 16b284aaf8e00f2007a93d074a26ed45acbceb46)

--- a/app/styles/screen-browse2.scss
+++ b/app/styles/screen-browse2.scss
@@ -408,6 +408,8 @@ html {
   }
 
   .browse2-facet-and-results-header {
+    float: right;
+
     .browse2-results-header {
       @include desktop {
         margin-left: 23em;
